[gd_scene load_steps=2 format=2]

[ext_resource path="res://logic/options_screen/options_container.gd" type="Script" id=1]

[node name="OptionsContainer" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -172.5
margin_right = 102.0
margin_bottom = 172.5
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="Languange" type="HBoxContainer" parent="."]
margin_right = 204.0
margin_bottom = 20.0
custom_constants/separation = 20

[node name="LangLabel" type="Label" parent="Languange"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 17.0
rect_min_size = Vector2( 84, 0 )
text = "Languange:"

[node name="LangOptions" type="OptionButton" parent="Languange"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 204.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "English"
items = [ "English", null, false, 0, null ]
selected = 0

[node name="MusicContainer" type="VBoxContainer" parent="."]
margin_top = 30.0
margin_right = 204.0
margin_bottom = 114.0

[node name="Music" type="HBoxContainer" parent="MusicContainer"]
margin_right = 204.0
margin_bottom = 40.0

[node name="MusicLabel" type="Label" parent="MusicContainer/Music"]
margin_top = 13.0
margin_right = 90.0
margin_bottom = 27.0
rect_min_size = Vector2( 90, 0 )
text = "Music:"

[node name="MusicButton" type="CheckButton" parent="MusicContainer/Music"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 170.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="SFX" type="HBoxContainer" parent="MusicContainer"]
margin_top = 44.0
margin_right = 204.0
margin_bottom = 84.0

[node name="SFXLabel" type="Label" parent="MusicContainer/SFX"]
margin_top = 13.0
margin_right = 90.0
margin_bottom = 27.0
rect_min_size = Vector2( 90, 0 )
text = "SFX:"

[node name="SFXButton" type="CheckButton" parent="MusicContainer/SFX"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 170.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="TextContainer" type="VBoxContainer" parent="."]
margin_top = 124.0
margin_right = 204.0
margin_bottom = 321.0
custom_constants/separation = 20

[node name="FontSize" type="HBoxContainer" parent="TextContainer"]
margin_right = 204.0
margin_bottom = 20.0

[node name="SizeLabel" type="Label" parent="TextContainer/FontSize"]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 17.0
rect_min_size = Vector2( 100, 0 )
text = "Font Size:"

[node name="SizeOptions" type="OptionButton" parent="TextContainer/FontSize"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 154.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "10"
items = [ "10", null, false, 0, null, "11", null, false, 1, null, "12", null, false, 2, null, "13", null, false, 3, null, "14", null, false, 4, null ]
selected = 0

[node name="LineSpacing" type="HBoxContainer" parent="TextContainer"]
margin_top = 40.0
margin_right = 204.0
margin_bottom = 60.0

[node name="LineLabel" type="Label" parent="TextContainer/LineSpacing"]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 17.0
rect_min_size = Vector2( 100, 0 )
text = "Line Spacing:"

[node name="LineOptions" type="OptionButton" parent="TextContainer/LineSpacing"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 154.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "10"
items = [ "10", null, false, 0, null, "12", null, false, 2, null, "14", null, false, 4, null, "16", null, false, 3, null, "18", null, false, 4, null ]
selected = 0

[node name="TestText" type="Label" parent="TextContainer"]
unique_name_in_owner = true
margin_top = 80.0
margin_right = 204.0
margin_bottom = 197.0
rect_min_size = Vector2( 0, 117 )
custom_constants/line_spacing = 10
text = "Once upon a time there was a kingdom of peace and prosperity."
autowrap = true
